--- a/scripts/run_once_30_osx_homebrew_casks.sh.tmpl
+++ b/scripts/run_once_30_osx_homebrew_casks.sh.tmpl
@@ -3,10 +3,10 @@
 source "{{ .chezmoi.sourceDir }}/source/00_common.sh"
 
 # OSX-only stuff. Abort if not OSX.
-is_osx || return 1
+is_osx || exit 1
 
 # Exit if Homebrew is not installed.
-[[ ! "$(type -p brew)" ]] && e_error "Brew casks need Homebrew to install." && return 1
+[[ ! "$(type -p brew)" ]] && e_error "Brew casks need Homebrew to install." && exit 1
 
 # Ensure the cask kegs are installed.
 kegs=(
