--- a/scripts/run_once_10_osx_xcode.sh.tmpl
+++ b/scripts/run_once_10_osx_xcode.sh.tmpl
@@ -3,7 +3,7 @@
 source "{{ .chezmoi.sourceDir }}/source/00_common.sh"
 
 # OSX-only stuff. Abort if not OSX.
-is_osx || return 1
+is_osx || exit 1
 
 # Some tools look for XCode, even though they don't need it.
 # https://github.com/cowboy/dotfiles#os-x-notes
