--- a/scripts/run_once_20_osx_homebrew.sh.tmpl
+++ b/scripts/run_once_20_osx_homebrew.sh.tmpl
@@ -3,7 +3,7 @@
 source "{{ .chezmoi.sourceDir }}/source/00_common.sh"
 
 # OSX-only stuff. Abort if not OSX.
-is_osx || return 1
+is_osx || exit 1
 
 # Install Homebrew.
 if [[ ! "$(type -p brew)" ]]; then
