--- a/scripts/run_once_50_osx_iterm2.sh.tmpl
+++ b/scripts/run_once_50_osx_iterm2.sh.tmpl
@@ -3,7 +3,7 @@
 source "{{ .chezmoi.sourceDir }}/source/00_common.sh"
 
 # OSX-only stuff. Abort if not OSX.
-is_osx || return 1
+is_osx || exit 1
 
 /usr/libexec/PlistBuddy -c "Add :'Custom Color Presets':'Solarized Dark' dict" ~/Library/Preferences/com.googlecode.iterm2.plist
 /usr/libexec/PlistBuddy -c "Merge '$DOTFILES/config/iTerm2/Solarized Dark - Patched.itermcolors' :'Custom Color Presets':'Solarized Dark - Patched'" ~/Library/Preferences/com.googlecode.iterm2.plist
