--- a/scripts/run_once_40_devtools.sh.tmpl
+++ b/scripts/run_once_40_devtools.sh.tmpl
@@ -25,7 +25,7 @@ if ! command -v brew > /dev/null; then
         else
             asdf update
         fi
-    ) && \. "$ASDF_DIR/nvm.sh" && ([ -z "$BASH_VERSION" ] || \. "$ASDF_DIR/completions/asdf.bash")
+    ) && \. "$ASDF_DIR/asdf.sh" && ([ -z "$BASH_VERSION" ] || \. "$ASDF_DIR/completions/asdf.bash")
 fi
 
 e_arrow "Installing/updating ASDF plugins...\n"
