--- a/scripts/run_once_20_ubuntu_apt.sh.tmpl
+++ b/scripts/run_once_20_ubuntu_apt.sh.tmpl
@@ -12,7 +12,7 @@ apt_packages=()
 deb_installed=()
 deb_sources=()
 
-installers_path="$DOTFILES/caches/installers"
+installers_path="{{ .chezmoi.sourceDir }}/caches/installers"
 
 # Ubuntu distro release name, eg. "xenial"
 release_name=$(lsb_release -c | awk '{print $2}')
@@ -146,25 +146,12 @@ if is_ubuntu_desktop; then
   deb_sources+=("https://discordapp.com/api/download?platform=linux&format=deb")
 fi
 
-function other_stuff() {
-  # Install Git Extras
-  if [[ ! "$(type -p git-extras)" ]]; then
-    e_header "Installing Git Extras"
-    (
-      cd $DOTFILES/vendor/git-extras &&
-      sudo make install
-    )
-  fi
-  # Install misc bins from zip file.
-  install_from_zip ngrok 'https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip'
-}
-
 ####################
 # ACTUALLY DO THINGS
 ####################
 
 # Add APT keys.
-keys_cache=$DOTFILES/caches/init/apt_keys
+keys_cache={{ .chezmoi.sourceDir }}/caches/init/apt_keys
 IFS=$'\n' GLOBIGNORE='*' command eval 'setdiff_cur=($(<$keys_cache))'
 setdiff_new=("${apt_keys[@]}"); setdiff; apt_keys=("${setdiff_out[@]}")
 unset setdiff_new setdiff_cur setdiff_out
@@ -245,24 +232,3 @@ if (( ${#deb_installed_i[@]} > 0 )); then
     sudo dpkg -i "$installer_file"
   done
 fi
-
-# install bins from zip file
-function install_from_zip() {
-  local name=$1 url=$2 bins b zip tmp
-  shift 2; bins=("$@"); [[ "${#bins[@]}" == 0 ]] && bins=($name)
-  if [[ ! "$(which $name)" ]]; then
-    mkdir -p "$installers_path"
-    e_header "Installing $name"
-    zip="$installers_path/$(echo "$url" | sed 's#.*/##')"
-    wget -O "$zip" "$url"
-    tmp=$(mktemp -d)
-    unzip "$zip" -d "$tmp"
-    for b in "${bins[@]}"; do
-      sudo cp "$tmp/$b" "/usr/local/bin/$(basename $b)"
-    done
-    rm -rf $tmp
-  fi
-}
-
-# Run anything else that may need to be run.
-type -t other_stuff >/dev/null && other_stuff
