--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,5 +1,5 @@
 # Where the magic happens.
-export DOTFILES=~/.dotfiles
+export DOTFILES={{ .chezmoi.sourceDir }}
 
 # Source Prezto.
 if [[ -s "~/.zprezto/init.zsh" ]]; then
