Trying to specify git command.

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -7,4 +7,7 @@ sourceDir = "{{ .chezmoi.homeDir }}/.dotfiles"
     name = "{{ $name }}"
 [diff]
     exclude = ["scripts"]
-
+{{ if eq .chezmoi.os "linux" }}
+[git]
+    command = "/usr/bin/git"
+{{ end }}
