--- a/.chezmoiscripts/run_once_40_zsh.sh.tmpl
+++ b/.chezmoiscripts/run_once_40_zsh.sh.tmpl
@@ -2,12 +2,12 @@
 
 source "{{ .chezmoi.sourceDir }}/source/00_common.sh"
 
-git clone --recursive https://github.com/sorin-ionescu/prezto.git "${ZDOTDIR:-$HOME}/.zprezto"
+git clone --recursive https://github.com/sorin-ionescu/prezto.git "{{ .chezmoi.homeDir }}/.zprezto"
 
-ln -nfs "~/.zprezto/runcoms/zlogin" "{{ .chezmoi.homeDir }}/.zlogin"
-ln -nfs "~/.zprezto/runcoms/zlogout" "{{ .chezmoi.homeDir }}/.zlogout"
-ln -nfs "~/.zprezto/runcoms/zprofile" "{{ .chezmoi.homeDir }}/.zprofile"
-ln -nfs "~/.zprezto/runcoms/zshenv" "{{ .chezmoi.homeDir }}/.zshenv"
+ln -nfs "{{ .chezmoi.homeDir }}/.zprezto/runcoms/zlogin" "{{ .chezmoi.homeDir }}/.zlogin"
+ln -nfs "{{ .chezmoi.homeDir }}/.zprezto/runcoms/zlogout" "{{ .chezmoi.homeDir }}/.zlogout"
+ln -nfs "{{ .chezmoi.homeDir }}/.zprezto/runcoms/zprofile" "{{ .chezmoi.homeDir }}/.zprofile"
+ln -nfs "{{ .chezmoi.homeDir }}/.zprezto/runcoms/zshenv" "{{ .chezmoi.homeDir }}/.zshenv"
 
 # Create override directories.
 mkdir -p {{ .chezmoi.homeDir }}/.zsh.before
