Revert and delete .zprezto before cloning.

--- a/.chezmoiscripts/run_once_40_zsh.sh.tmpl
+++ b/.chezmoiscripts/run_once_40_zsh.sh.tmpl
@@ -2,7 +2,8 @@
 
 source "{{ .chezmoi.sourceDir }}/source/00_common.sh"
 
-git clone --recursive https://github.com/sorin-ionescu/prezto.git "{{ .chezmoi.homeDir }}/.zprezto" || true
+rm -rf "{{ .chezmoi.homeDir }}/.zprezto"
+git clone --recursive https://github.com/sorin-ionescu/prezto.git "{{ .chezmoi.homeDir }}/.zprezto"
 
 ln -nfs "{{ .chezmoi.homeDir }}/.zprezto/runcoms/zlogin" "{{ .chezmoi.homeDir }}/.zlogin"
 ln -nfs "{{ .chezmoi.homeDir }}/.zprezto/runcoms/zlogout" "{{ .chezmoi.homeDir }}/.zlogout"
