--- a/.chezmoiscripts/run_once_20_osx_homebrew.sh.tmpl
+++ b/.chezmoiscripts/run_once_20_osx_homebrew.sh.tmpl
@@ -8,36 +8,15 @@ is_osx || exit 0
 # Install Homebrew.
 if [[ ! "$(type -p brew)" ]]; then
   e_header "Installing Homebrew"
-  true | ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+  
+  /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+  
+  eval "$(/opt/homebrew/bin/brew shellenv)"
 fi
 
 # Exit if, for some reason, Homebrew is not installed.
-[[ ! "$(type -p brew)" ]] && e_error "Homebrew failed to install." && return 1
+[[ ! "$(type -p brew)" ]] && e_error "Homebrew failed to install." && exit 1
 
 e_header "Updating Homebrew"
 brew doctor
 brew update
-
-# Functions used in subsequent init scripts.
-
-# Tap Homebrew kegs.
-function brew_tap_kegs() {
-  kegs=($(setdiff "${kegs[*]}" "$(brew tap)"))
-  if (( ${#kegs[@]} > 0 )); then
-    e_header "Tapping Homebrew kegs: ${kegs[*]}"
-    for keg in "${kegs[@]}"; do
-      brew tap $keg
-    done
-  fi
-}
-
-# Install Homebrew recipes.
-function brew_install_recipes() {
-  recipes=($(setdiff "${recipes[*]}" "$(brew list)"))
-  if (( ${#recipes[@]} > 0 )); then
-    e_header "Installing Homebrew recipes: ${recipes[*]}"
-    for recipe in "${recipes[@]}"; do
-      brew install $recipe
-    done
-  fi
-}
