--- a/.chezmoiscripts/run_once_30_osx_homebrew_casks.sh.tmpl
+++ b/.chezmoiscripts/run_once_30_osx_homebrew_casks.sh.tmpl
@@ -8,6 +8,17 @@ is_osx || exit 0
 # Exit if Homebrew is not installed.
 [[ ! "$(type -p brew)" ]] && e_error "Brew casks need Homebrew to install." && exit 1
 
+# Tap Homebrew kegs.
+function brew_tap_kegs() {
+  kegs=($(setdiff "${kegs[*]}" "$(brew tap)"))
+  if (( ${#kegs[@]} > 0 )); then
+    e_header "Tapping Homebrew kegs: ${kegs[*]}"
+    for keg in "${kegs[@]}"; do
+      brew tap $keg
+    done
+  fi
+}
+
 # Ensure the cask kegs are installed.
 kegs=(
   homebrew/cask-drivers
@@ -26,10 +37,10 @@ casks=(
   alfred
   android-platform-tools
   chromium
-  controllermate
   docker
   firefox
   gimp
+  google-chrome
   gyazo
   hex-fiend
   iterm2
@@ -55,9 +66,6 @@ casks=(
   quicknfo
   suspicious-package
   webpquicklook
-  # Fonts
-  font-mplus-nerd-font
-  font-mplus-nerd-font-mono
 )
 
 # Install Homebrew casks.
