--- a/.chezmoiscripts/run_once_40_zsh.sh.tmpl
+++ b/.chezmoiscripts/run_once_40_zsh.sh.tmpl
@@ -18,7 +18,7 @@ mkdir -p {{ .chezmoi.homeDir }}/.zsh.prompts
 # zsh
 if is_osx; then
     # This is where brew stores its binary symlinks
-    local binroot="$(brew --config | awk '/HOMEBREW_PREFIX/ {print $2}')"/bin
+    binroot="$(brew --config | awk '/HOMEBREW_PREFIX/ {print $2}')"/bin
 
     if [[ "$(type -p $binroot/zsh)" && "$(cat /etc/shells | grep -q "$binroot/zsh")" ]]; then
       e_header "Adding $binroot/zsh to the list of acceptable shells"
