--- a/.chezmoiscripts/run_once_50_osx_iterm2.sh.tmpl
+++ b/.chezmoiscripts/run_once_50_osx_iterm2.sh.tmpl
@@ -5,7 +5,7 @@ source "{{ .chezmoi.sourceDir }}/source/00_common.sh"
 # OSX-only stuff. Abort if not OSX.
 is_osx || exit 0
 
-/usr/libexec/PlistBuddy -c "Add :'Custom Color Presets':'Solarized Dark' dict" ~/Library/Preferences/com.googlecode.iterm2.plist
+/usr/libexec/PlistBuddy -c "Add :'Custom Color Presets':'Solarized Dark - Patched' dict" ~/Library/Preferences/com.googlecode.iterm2.plist
 /usr/libexec/PlistBuddy -c "Merge '{{ .chezmoi.sourceDir }}/config/iTerm2/Solarized Dark - Patched.itermcolors' :'Custom Color Presets':'Solarized Dark - Patched'" ~/Library/Preferences/com.googlecode.iterm2.plist || true
 
 # https://github.com/skwp/dotfiles/blob/4f444cbc1343785fac223722fff6e382527b02bc/Rakefile#L190-L228
