--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -75,7 +75,7 @@
 
 [include]
   # Include aliases.
-  path = .gitconfig_aliases
+  path = .gitconfig_alias
 
   # Include extra configuration (if any).
   path = .gitconfig_local
