--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -80,6 +80,9 @@
   # Include extra configuration (if any).
   path = .gitconfig_local
 
+[github]
+  user = {{ .github_user }}
+
 [url "git@github.com:"]
   insteadOf = "gh:"
   pushInsteadOf = "github:"
