--- a/run_install.sh.tmpl
+++ b/run_install.sh.tmpl
@@ -7,7 +7,7 @@ source $SOURCE_DIR/source/00_common.sh
 
 e_header "Running '$0'"
 
-for file in ($SOURCE_DIR/scripts/*); do
+for file in $SOURCE_DIR/scripts/*; do
     e_header "Sourcing $(basename "$file")"
     source "$file"
 done
